# myllm

./: .flake8  .gitignore  .pre-commit-config.yaml  README.md  batch-main.py  main.py  pyproject.toml  setup.py
src/extensions/: __init__.py  bindings.cpp  flash_attention.cpp  flash_attention.h  flash_attention_cpu.cpp
src/my_llm/: __init__.py  attention.py  batch.py  embedding.py  generate.py  kv_cache.py  layer_norm.py  models.py  positional_encoding.py  quantize.py  qwen2_week1.py  qwen2_week2.py  sampler.py
src/utils/: __init__.py  basic.py  utils.py
test/: test_week_1_day_1.py  test_week_1_day_2.py  test_week_1_day_3.py  test_week_1_day_4.py  test_week_1_day_5.py  test_week_2_day_1.py  test_week_2_day_4.py  test_week_2_day_6.py
